--- a/index.html
+++ b/index.html
@@ -85,14 +85,7 @@
                                             aria-label="Toggle navigation">Motivos</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Crecimiento</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#pricing" class="page-scroll"
-                                            aria-label="Toggle navigation">Planes</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Q&A</a>
+                                        <a href="#faq" aria-label="Toggle navigation">Q&A</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -248,7 +241,7 @@
     <!-- End Achievement Area -->
 
 
-    <section class="faq section">
+    <section id="faq" class="faq section">
         <div class="container">
             <div class="row">
                 <div class="col-12">
