--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:url" content="https://premiky.com/">
     <meta property="og:title" content="Premiky - Tu app para reservar turnos">
     <meta property="og:description" content="Con Premiky podrás optimizar tus reservas aprovechando al máximo sus últimas novedades.">
     <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:url" content="https://premiky.com/">
     <meta property="twitter:title" content="Premiky - Tu app para reservar turnos">
     <meta property="twitter:description" content="Con Premiky podrás optimizar tus reservas aprovechando al máximo sus últimas novedades.">
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
