imagen metatags redes

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <meta property="og:url" content="https://premiky.com/">
     <meta property="og:title" content="Premiky - Tu app para reservar turnos">
     <meta property="og:description" content="Con Premiky podrás optimizar tus reservas aprovechando al máximo sus últimas novedades.">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="https://premiky.com/assets/images/logo_premiky.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://premiky.com/">
     <meta property="twitter:title" content="Premiky - Tu app para reservar turnos">
     <meta property="twitter:description" content="Con Premiky podrás optimizar tus reservas aprovechando al máximo sus últimas novedades.">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image" content="https://premiky.com/assets/images/logo_premiky.png">
 
     <meta charset="utf-8" />
+    <html lang = "es"></html>
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
@@ -210,8 +211,8 @@
             <div class="row">
                 <div class="col-lg-10 offset-lg-1 col-md-12 col-12">
                     <div class="title">
-                        <h2>Validados por nuestros clientes y usuarios mas exigentes</h2>
-                        <h5 style="color: white;">Contamos con la aprobación y constante comunicación con nuestros usuarios para garantizar la mejor experiencia</h5>
+                        <h2>¡Ayúdanos a mejorar contándonos tu experiencia!</h2>
+                        <h5 style="color: white;">Nos gusta estar en contacto constante, ponernos al día y que puedas ver los avances del producto.</h5>
                     </div>
                 </div>
             </div>
