--- a/index.html
+++ b/index.html
@@ -375,10 +375,9 @@
                             <ul class="social">
                                 <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/premikyapp/"><i class="lni lni-instagram"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-youtube"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-pinterest"></i></a></li>
                             </ul>
                             <p class="copyright-text">Diseñado y desarrollado por <a href="https://aivenweb.com"
                                     rel="nofollow" target="_blank">AivenWeb</a>
@@ -388,18 +387,6 @@
                     </div>
                     <div class="col-lg-8 col-md-8 col-12">
                         <div class="row">
-                            <div class="col-lg-3 col-md-6 col-12">
-                                <!-- Single Widget -->
-                                <div class="single-footer f-link">
-                                    <h3>Soluciones</h3>
-                                    <ul>
-                                        <li><a href="javascript:void(0)">Marketing</a></li>
-                                        <li><a href="javascript:void(0)">Análisis</a></li>
-                                        <li><a href="javascript:void(0)">Comercio</a></li>
-                                    </ul>
-                                </div>
-                                <!-- End Single Widget -->
-                            </div>
                             <div class="col-lg-3 col-md-6 col-12">
                                 <!-- Single Widget -->
                                 <div class="single-footer f-link">
