--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="es">
 
 <head>
     <!-- Primary Meta Tags -->
@@ -22,7 +22,6 @@
     <meta property="twitter:image" content="https://premiky.com/assets/images/logo_premiky.png">
 
     <meta charset="utf-8" />
-    <meta lang = "es"/>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
